tests/baselines/reference/jsDeclarationsExportAssignedClassExpressionAnonymousWithSub(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== index.js (0 errors) ====
    module.exports = class {
        /**
         * @param {number} p
         */
        constructor(p) {
            this.t = 12 + p;
        }
    }
    module.exports.Sub = class {
        constructor() {
            this.instance = new module.exports(10);
        }
    }
    